--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
     "astro": "^5.16.4",
+    "node-html-parser": "^7.0.1",
     "tailwindcss": "^4.1.17"
   }
 }
